<resources>
    <string name="app_name">BHUHome</string>

    <!--底部菜单-->
    <string name="string_home_activity_wemay">主页</string>
    <string name="string_home_activity_health">寻医</string>
    <string name="string_home_activity_find">商城</string>
    <string name="string_home_activity_me">我的</string>

    <string name="input_phone">请输入手机号码</string>

    <!--mall-->
    <string name="mall_base_price_char">¥</string>
    <string name="mall_base_price_unit" formatted="false">¥%s</string>
    <string name="collect_good_price_unit" formatted="false">市场价¥%s</string>
    <string name="mall_base_price" formatted="false">¥ %s</string>
    <string name="mall_base_num" formatted="false">×%s</string>
    <string name="mall_base_money" formatted="false">%s元</string>
    <string name="mall_market_price">市场价</string>

    <!--通用下拉上拉-->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉可加载更多</string>
    <string name="release_to_load">松开立即加载更多</string>
    <string name="loading">正在加载更多数据...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="msg_center">消息中心</string>
    <string name="device_manage">设备管理</string>
    <string name="help_center">帮助中心</string>
    <string name="online_service">在线客服</string>
    <string name="about_us">关于我们</string>
    <string name="string_settings">设置</string>
    <string name="string_logout">退出登录</string>
    <string name="string_are_you_sure_you_want_to_logout">您确定要退出登录吗？</string>
    <string name="string_cancel">取消</string>
    <string name="string_confirm">确定</string>

    <string name="mine_latest_version">当前已是最新版本</string>
    <string name="mine_ensure_version">请点击确定进行更新！</string>
    <string name="mine_version_update">版本更新</string>
    <string name="mine_version_latest">最新版本为</string>
    <string name="mine_version_update_ornot">您是否更新?</string>
    <string name="mine_version_notcare">忽略</string>

    <!--apk下载-->
    <string name="download_preview">准备下载……</string>
    <string name="download_start">开始下载</string>
    <string name="download_doing">BH下载中……</string>
    <string name="download_finish">下载完成,点击安装</string>
    <string name="download_failed">下载失败!</string>
    <string name="download_progress">下载进度</string>

    <!--关于我们-->
    <string name="string_feedback">意见反馈</string>
    <string name="string_function_is_introduced">功能介绍</string>
    <string name="string_user_agreement">用户协议</string>
    <string name="string_give_us_score">版本更新</string>
    <string name="string_copyright">苏州金石 版权所有\n(C)2017 suzhoujinshi Technology Inc.</string>

    <!--萤石云-->
    <string name="device_is_added">%s设备已添加</string>
    <string name="device_not_exist">设备不存在</string>
    <string name="quality_hd">高清</string>
    <string name="quality_balanced">均衡</string>
    <string name="quality_flunet">流畅</string>
    <string name="ptz">云台</string>
    <string name="talk">对讲</string>
    <string name="capture">截图</string>
    <string name="record">录像</string>
    <string name="close_camera_lens">镜头遮蔽</string>
    <string name="open_camera_lens">镜头开启</string>
    <string name="camera_lens_closed">镜头遮蔽中</string>
    <string name="camera_lens_closing">正在遮蔽镜头...</string>
    <string name="camera_lens_opening">正在取消遮蔽...</string>
    <string name="close_source_localization">听声辨位关闭</string>
    <string name="open_source_localization">听声辨位开启</string>
    <string name="loading_text_default">加载中，请稍候</string>
    <string name="realplay_no_encrypt_password_error">视频已加密，播放失败</string>
    <string name="readed">已读</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="reset_device">复位设备</string>
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="device_defence_open_fail">活动检测开启失败</string>
    <string name="device_defence_close_success">活动检测关闭成功</string>
    <string name="device_defence_close_fail">活动检测失关闭</string>
    <string name="realplay_full_talk_start_tip">你可以开始说话了</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_sound_lacalization_failed">听声辨位已开启，操作失败</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_password_error_message4">视频已加密，请联系分享者获取密码进行查看（密码区分大小写）</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_play_talkback_network_exception">网络异常，对讲已关闭</string>
    <string name="realplay_play_talkback_request_timeout">请求超时，对讲已关闭</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_loading">正在加载，请稍候...</string>
    <string name="realplay_login_password_error">登录设备失败</string>
    <string name="realplay_login_password_msg">初始密码为设备验证码，若设备已注册平台，请输入用户ID</string>
    <string name="realplay_play_no_video_source">没有视频源</string>
    <!-- 历史录像回放界面 -->
    <string name="camera_not_online">设备不在线</string>
    <string name="remoteplayback_fail">视频播放失败</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="remoteplayback_connect_server_error">连接服务器失败，请重试</string>
    <string name="remoteplayback_connect_device_error">播放中断，请重试</string>
    <string name="remoteplayback_searchfile_fail_for_network">查询录像失败,请检查您的网络</string>
    <string name="remoteplayback_searchfile_fail_for_device">查询录像失败</string>
    <string name="remoteplayback_norecordfile">没有查询到录像</string>
    <string name="remoteplayback_norecordfile_alarm">没有查询到该时刻的报警录像</string>
    <string name="remoteplayback_capture_fail">抓图失败</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="receice_leave_msg_video">给你发了一条视频留言消息</string>
    <string name="receice_leave_msg_audio">给你发了一条语音留言消息</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <string name="talking">对讲中…</string>
    <string name="already_saved_to_volume">已保存至相册</string>
    <string name="source_detection_off">OFF</string>
    <string name="source_detection_on">ON</string>

    <!--登录-->
    <string name="string_finish">完成</string>
    <string name="string_phone_number">手机号</string>
    <string name="string_input_phone_number">请输入手机号</string>
    <string name="label_if_use_then_agree">使用即表示您同意</string>
    <string name="label_app_protocol">《BH用户协议》</string>
    <string name="hint_input_phone_number">请输入手机号码</string>

    <!--密码登录页面-->
    <string name="string_password_remind">请输入6-16位的密码</string>
    <string name="string_right_number_remind">请输入正确的手机号</string>
    <!--验证吗-->
    <string name="string_code_remind">验证码短信可能略有延迟,确定返回并重新开始?</string>
    <string name="string_login_fail">登录失败</string>
    <string name="string_send_voice">语音验证码已发送，请注意接听来电</string>
    <string name="string_send_voice_ok">已成功发送语音验证码，请保持电话通畅并注意接听来电</string>
    <string name="string_send_code">验证码已发送</string>
    <string name="string_retry">重新获取</string>
    <string name="string_retry_count_down">重新获取(%d)</string>
    <string name="string_comment_hint">我来说几句</string>
    <string name="common_pass_reg">[^0-9a-zA-Z]</string>
    <string name="service_exception">网络开小差去了，请您稍后重试！</string>
    <string name="string_confirm_submit">确认</string>
    <string name="cancel">取消</string>
</resources>
