<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f0f0f0"
    android:orientation="vertical"
    >
    <include layout="@layout/head_title_layout"
        android:id="@+id/title"/>

    <ImageView
        android:id="@+id/image_view_1"
        android:layout_width="@dimen/d90"
        android:layout_height="@dimen/d90"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d9"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txt_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d6"
        tools:text="BH 3.0"
        android:textColor="@color/color_a7a7a7"
        android:textSize="@dimen/d15" />

    <!-- 功能介绍 -->
    <TextView
        android:id="@+id/text_view_function_introduction"
        style="@style/text_view_no_icon"
        android:layout_below="@+id/txt_version_name"
        android:layout_marginTop="@dimen/d20"
        android:background="@color/color_ffffff"
        android:drawableEnd="@mipmap/ic_list_rightarrow"
        android:drawableRight="@mipmap/ic_list_rightarrow"
        android:text="@string/string_function_is_introduced" />

    <View
        android:id="@+id/view_1"
        style="@style/gray_line"
        android:layout_below="@+id/text_view_function_introduction" />

    <!-- 用户协议 -->
    <TextView
        android:id="@+id/text_view_user_agreement"
        style="@style/text_view_no_icon"
        android:layout_below="@+id/view_1"
        android:background="@color/color_ffffff"
        android:drawableEnd="@mipmap/ic_list_rightarrow"
        android:drawableRight="@mipmap/ic_list_rightarrow"
        android:text="@string/string_user_agreement" />

    <View
        android:id="@+id/view_2"
        style="@style/gray_line"
        android:layout_below="@+id/text_view_user_agreement" />

    <!-- 给我们评分 -->
    <TextView
        android:id="@+id/text_view_grade"
        style="@style/text_view_no_icon"
        android:layout_below="@+id/view_2"
        android:background="@color/color_ffffff"
        android:drawableEnd="@mipmap/ic_list_rightarrow"
        android:drawableRight="@mipmap/ic_list_rightarrow"
        android:text="@string/string_give_us_score" />

    <!-- 版权声明 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_view_grade"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="@dimen/d15"
        android:text="@string/string_copyright"
        android:textColor="@color/color_a7a7a7"
        android:textSize="@dimen/d9" />

</RelativeLayout>