<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|left"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center|left"
        android:orientation="horizontal">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dimens_10dp"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_6dp"
        android:layout_marginRight="@dimen/dimens_10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_doing"
            android:textSize="13dp"
            android:textColor="@color/color_black"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_title"
            android:text="@string/download_finish"
            android:textColor="@color/color_black"
            android:textSize="13dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/download_progress"
            android:textSize="13dp"
            android:textColor="@color/color_black"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_marginTop="@dimen/dimens_5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_content"
            android:progress="14"
            android:max="100"
            android:progressDrawable="@drawable/seekbar_define_style"
            android:indeterminate="false" />

    </RelativeLayout>
    </LinearLayout>

</LinearLayout>