<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:scaleType="center"
        android:src="@mipmap/title_back_arrow" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textColor="@color/color_1a1a1a"
        android:textSize="@dimen/font_eighteen"
        tools:text="设置初始密码" />

    <View
        android:id="@+id/tool_bar_gray_line"
        style="@style/gray_line"
        android:layout_marginTop="?attr/actionBarSize" />

    <com.ichoice.wemay.views.widgets.DeleteEditText
        android:id="@+id/edit_text_password"
        android:layout_width="@dimen/dimen_one_hundred_eighty"
        android:layout_height="@dimen/dimen_forty"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="126dp"
        android:background="@null"
        android:gravity="center"
        android:hint="请输入6-16位密码"
        android:inputType="textPassword"
        android:maxLength="16"

        android:textColor="@color/color_1a1a1a"
        android:textColorHint="@color/color_a7a7a7"
        android:textCursorDrawable="@drawable/edit_text_cursor_color"
        android:textSize="@dimen/font_eighteen" />

    <CheckBox
        android:id="@+id/check_box_password_show"
        android:layout_width="@dimen/dimen_thirty"
        android:layout_height="@dimen/dimen_thirty"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dimen_one_hundred_fifteen"
        android:layout_marginStart="@dimen/dimen_one_hundred_fifteen"
        android:layout_marginTop="131dp"
        android:background="@drawable/checkbox_show_password_selector"
        android:button="@null"
        android:checked="false" />

    <View
        style="@style/gray_line"
        android:layout_width="@dimen/dimen_two_hundred_sixty"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="166dp"
        android:background="@color/color_3b93eb" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/dimen_two_hundred_sixty"
        android:layout_height="@dimen/dimen_forty_eight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="196dp"
        android:background="@drawable/button_bg_selector_3b93eb"
        android:enabled="false"
        android:text="@string/string_finish"
        android:textColor="@color/button_text_color_selector"
        android:textSize="@dimen/dimen_eighteen" />

    <LinearLayout
        android:id="@+id/layout_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="258dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_if_use_then_agree"/>

        <TextView
            android:id="@+id/text_view_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_app_protocol"
            android:textColor="@color/color_3b93eb"
            android:textSize="@dimen/font_fourteen" />

    </LinearLayout>

</FrameLayout>