<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/color_f5f5f5">
    <!--<com.bh.uhome.bhuhome.widget.TitleBarView-->
        <!--android:id="@+id/txt_head_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dimens_45dp" />-->
    <include layout="@layout/view_titlebar"
        android:id="@+id/txt_head_title"
        />
    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/txt_head_title"
        android:layout_height="@dimen/dimens_200dp"
        android:background="@mipmap/bg_login_header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/head_zhangjie"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_5dp"
                android:textColor="@color/color_black"
                android:text="张杰"/>
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rLayout"
        android:orientation="vertical">
        <!--消息中心-->
        <RelativeLayout
            android:id="@+id/rLay_msg_center"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:background="@color/color_ffffff">

            <!-- item_icon -->
            <ImageView
                android:id="@+id/icon_msg_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_msg_center"
                android:layout_alignTop="@+id/text_msg_center"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d15"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_zhengzhuang" />

            <!-- title -->
            <TextView
                android:id="@+id/text_msg_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_msg_center"
                android:drawableEnd="@mipmap/ic_list_rightarrow"
                android:drawableRight="@mipmap/ic_list_rightarrow"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d15"
                android:textColor="@color/color_1a1a1a"
                android:textSize="@dimen/d16"
                android:text="@string/msg_center" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_10dp"
            android:background="@color/color_f5f5f5"/>
        <!--设备管理-->
        <RelativeLayout
            android:id="@+id/rLay_device_manage"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:background="@color/color_ffffff">

            <!-- item_icon -->
            <ImageView
                android:id="@+id/icon_device_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_device_manage"
                android:layout_alignTop="@+id/text_device_manage"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d15"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_zhengzhuang" />

            <!-- title -->
            <TextView
                android:id="@+id/text_device_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_device_manage"
                android:drawableEnd="@mipmap/ic_list_rightarrow"
                android:drawableRight="@mipmap/ic_list_rightarrow"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d15"
                android:textColor="@color/color_1a1a1a"
                android:textSize="@dimen/d16"
                android:text="@string/device_manage" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1dp"
            android:background="@color/color_f5f5f5"/>
        <!--帮助中心-->
        <RelativeLayout
            android:id="@+id/rLay_help_center"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:background="@color/color_ffffff">

            <!-- item_icon -->
            <ImageView
                android:id="@+id/icon_help_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_help_center"
                android:layout_alignTop="@+id/text_help_center"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d15"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_zhengzhuang" />

            <!-- title -->
            <TextView
                android:id="@+id/text_help_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_help_center"
                android:drawableEnd="@mipmap/ic_list_rightarrow"
                android:drawableRight="@mipmap/ic_list_rightarrow"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d15"
                android:textColor="@color/color_1a1a1a"
                android:textSize="@dimen/d16"
                android:text="@string/help_center" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_10dp"
            android:background="@color/color_f5f5f5"/>
        <!--在线客服-->
        <RelativeLayout
            android:id="@+id/rLay_online_service"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:background="@color/color_ffffff">

            <!-- item_icon -->
            <ImageView
                android:id="@+id/icon_online_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_online_service"
                android:layout_alignTop="@+id/text_online_service"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d15"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_zhengzhuang" />

            <!-- title -->
            <TextView
                android:id="@+id/text_online_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_online_service"
                android:drawableEnd="@mipmap/ic_list_rightarrow"
                android:drawableRight="@mipmap/ic_list_rightarrow"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d15"
                android:textColor="@color/color_1a1a1a"
                android:textSize="@dimen/d16"
                android:text="@string/online_service" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1dp"
            android:background="@color/color_f5f5f5"/>
        <!--关于我们-->
        <RelativeLayout
            android:id="@+id/rLay_about_us"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:background="@color/color_ffffff">

            <!-- item_icon -->
            <ImageView
                android:id="@+id/icon_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_about_us"
                android:layout_alignTop="@+id/text_about_us"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/d15"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_zhengzhuang" />

            <!-- title -->
            <TextView
                android:id="@+id/text_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon_about_us"
                android:drawableEnd="@mipmap/ic_list_rightarrow"
                android:drawableRight="@mipmap/ic_list_rightarrow"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d15"
                android:textColor="@color/color_1a1a1a"
                android:textSize="@dimen/d16"
                android:text="@string/about_us" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>